# Visualization-farmework

./: CMakeLists.txt  README.md  Skeleton.sln
Skeleton/: GPUProgram.cpp  GPUProgram.h  Skeleton.cpp  Skeleton.vcxproj  Skeleton.vcxproj.filters  boundingbox.cpp  boundingbox.h  camera.h  fragmentSource2.glsl  framebuffer.hpp  framework.cpp  framework.h  main.cpp  texture3d.h
Skeleton/shaders/: fragmentSource.glsl  fragmentSource2.glsl
src/: GPUProgram.cpp  algebra.h  boundingbox.h  camera.cpp  camera.h  framework.cpp  framework.h  scene.cpp  scene.h  texture.cpp  texture.h  texture3d.cpp  texture3d.h
src/shaders/: vertexSource.glsl  vertexSource2.glsl
